changed section css selectors

--- a/index.html
+++ b/index.html
@@ -18,62 +18,43 @@
 
 				<div class = "nav">
 						<ul>
-								<li><a href="">About</a></li>
-								<li><a href="">Projects</a></li>
+								<li><a href="#About">About</a></li>
+								<li><a href="#Projects">Projects</a></li>
 								<li><a href="">Contact</a></li>
 						</ul>
 				</div>
 	</div>  <!-- End Section 1 -->
 
 
-	<div id="section2">	<!-- Begin Section 2 -->
+	<div class="section" id="About">
 		<div class="text">
-			<p>This is an About section.</p>
+			<p>This is the About section.</p>
 			<i class="fa fa-suitcase"></i>
   	 		<p>These are some things about me.</p>
   	 		<i class="fa fa-truck"></i>
 		</div>
-	</div>  <!-- End Section 2 -->
+	</div>
 
-	<div id="section3">	<!-- Begin Section 3 -->
+	<div class="section" id="Projects">
 		<div class="text">
-			<p>This is a Projects section.</p>
+			<p>This is the Projects section.</p>
 			<i class="fa fa-suitcase"></i>
   	 		<p>These are some projects I have done.</p>
   	 		<i class="fa fa-truck"></i>
 		</div>
-	</div>  <!-- End Section 3 -->
+	</div>
 
 
 
-	<div id="section4">	<!-- Begin Section 4 -->
+	<div class="section" id="Contacts">
 		<div class="text">
-			<p>This is a Contact section.</p>
+			<p>This is the Contact section.</p>
 			<i class="fa fa-suitcase"></i>
   	 		<p>These are some ways to contact me.</p>
   	 		<i class="fa fa-truck"></i>
 		</div>
-	</div>  <!-- End Section 4 -->
+	</div>
 
-
-
-
-
-
-	<div id="section5"> <!-- Begin Section 5 -->
-
-		<div id="holder">
-			<div id="maptext">
-				<p>These are all of the places that I've lived.</p>
-				<i class="fa fa-map"></i>
-				<i class="fa fa-map-marker"></i>
-			</div>  <!-- End maptext -->
-		</div> <!-- End holder -->
-
- 		<div id="map">
-			<!--Map is here -->
-		</div>
-	</div>  <!-- End Section 5 -->
 
 </body>
 </html>
