removed icons and map

--- a/index.html
+++ b/index.html
@@ -10,51 +10,37 @@
 
 <body>
 
-	<div id="section1"> <!-- Begin Section 1 -->
-
-				<!-- <i class="fa fa-certificate"></i> -->
+	<div id="section1">
 				<div id = "square"></div>
   	 		<p id = "name">Matt Stevens</p>
-
 				<div class = "nav">
 						<ul>
 								<li><a href="#About">About</a></li>
 								<li><a href="#Projects">Projects</a></li>
-								<li><a href="">Contact</a></li>
+								<li><a href="#Contacts">Contact</a></li>
 						</ul>
 				</div>
-	</div>  <!-- End Section 1 -->
-
+	</div>
 
 	<div class="section" id="About">
 		<div class="text">
 			<p>This is the About section.</p>
-			<i class="fa fa-suitcase"></i>
-  	 		<p>These are some things about me.</p>
-  	 		<i class="fa fa-truck"></i>
+  	 	<p>These are some things about me.</p>
 		</div>
 	</div>
 
 	<div class="section" id="Projects">
 		<div class="text">
 			<p>This is the Projects section.</p>
-			<i class="fa fa-suitcase"></i>
-  	 		<p>These are some projects I have done.</p>
-  	 		<i class="fa fa-truck"></i>
+  	 	<p>These are some projects I have done.</p>
 		</div>
 	</div>
-
-
 
 	<div class="section" id="Contacts">
 		<div class="text">
 			<p>This is the Contact section.</p>
-			<i class="fa fa-suitcase"></i>
-  	 		<p>These are some ways to contact me.</p>
-  	 		<i class="fa fa-truck"></i>
+  	 	<p>These are some ways to contact me.</p>
 		</div>
 	</div>
-
-
 </body>
 </html>
